chore: kind K8s 학습 트랙 폐기 — AWS EKS 놀이터를 단독 시작점으로 (#269)
* chore: K8s 학습 트랙(kind Stage 1~3)·AWS EKS 놀이터 계획 전면 폐기

* chore: CONTEXT.md 갱신 — PR #269 기록, #265 아카이브 이동

* chore: AWS EKS 계획 복원 — kind 트랙만 폐기로 범위 정정